--- a/portfolio/final/index.html
+++ b/portfolio/final/index.html
@@ -56,54 +56,54 @@
         </div>
         <div class="row4">
             <div class="left-4">
-                <img src="../../../../../University Union/axo pr-01.png" width="300" alt="University Union PR logo design">
+                <img src="content/axo pr front-01.png" width="300" alt="AXO PR logo design">
             </div>
             <div class="mid-4">
-                <img src="../../../../../University Union/axo pr front-01.png" width="300" alt="University Union PR logo design">
+                <img src="content/axo pr-01.png" width="300" alt="AXO PR logo design">
             </div>
 
             <div class="right-4">                
-                <img src="../../../../../University Union/axo pr-02.png" width="300" alt="University Union PR logo design">
+                <img src="content/axo pr-02.png" width="300" alt="AXO PR logo design">
             </div>
         </div>
         <div class="row-3">
             <div class="right-3">
-                <img src="../../../../../University Union/womens history month 2-01.png" width="300" alt="Womens History Month Post">
+                <img src="content/womens history month 2-01.png" width="300" alt="Womens History Month Post">
             </div>
             <div class="left-3">
-                <img src="../../../../../University Union/Afro Beats-01.png" width="300" alt="Afro Beats Post">
+                <img src="content/Afro Fest-01.png" width="300" alt="Afro Beats Post">
             </div>
         </div>
         <div class="row-2">
             <div class="left-2">
-                <img src="../../../../../University Union/Planet Underground Color.png" width="300" alt="Planet Underground Poster">
+                <img src="content/Planet Underground Color.png" width="300" alt="Planet Underground Poster">
             </div>
             <div class="mid-2">
                 <div class="midup-2">
-                    <img src="../../../../../University Union/FINALLLLLLL SS ANNOUNCE.png" width="230" alt="Planet Underground Post">
+                    <img src="content/FINALLLLLLL SS ANNOUNCE.png" width="230" alt="Planet Underground Post">
                 </div>
                 <div class="middown-2">
-                    <img src="../../../../../University Union/Sounds of Syracuse Cover.png" width="230" alt="Sounds of Syracuse Post">
+                    <img src="content/Sounds of Syracuse Cover.png" width="230" alt="Sounds of Syracuse Post">
                 </div>
             </div>
             <div class="right-2">
-                <img src= "../../../../../University Union/Sounds of Syracuse Poster.png" width="265" alt="Sounds of Syracuse Poster">
+                <img src= "content/Sounds of Syracuse Poster.png" width="265" alt="Sounds of Syracuse Poster">
             </div>
         </div>
         <div class="row-1">
             <div class="right-1">
-                <img src="../../../../../../Desktop/Random/diamond garage solutions business card-02.png" width=400 alt="Diamond Garage Solutions color logo">
+                <img src="content/diamond garage solutions business card-02.png" width=400 alt="Diamond Garage Solutions color logo">
             </div>
             <div class="left-1">
-                <img src="../../../../../../Desktop/Random/chaser-01.png" width="400" alt="Block Party Poster">
+                <img src="content/chaser-01.png" width="400" alt="Chaser logor">
             </div>
         </div>
         <div class="row0">
             <div class="left0">
-                <img class="left0" src="../../../../../../Desktop/University Union/uu twitter-01.png" width="250" alt="University Union Twitter Background Photo">
+                <img class="left0" src="content/uu twitter-02.png" width="250" alt="University Union Twitter Background Photo">
             </div>
             <div class="right0">
-                <img class="right0" src="../../../../../../Desktop/University Union/uu twitter-02.png" width="700" alt="University Union Instagram Profile Picture">
+                <img class="right0" src="content/uu twitter-02.png" width="700" alt="University Union Instagram Profile Picture">
             </div>
         </div>
         <div class="row1">
