--- a/portfolio/final/index.html
+++ b/portfolio/final/index.html
@@ -48,62 +48,62 @@
     <main>
         <div class = row-5>
             <div class="left-5">
-                <img src="content/spoon 1 join.png" width="300" alt="Join Spoon graphic 1">
+                <img src="content/spoon 1 join.png" width="300" alt="Join Spoon graphic 1" id="shadow">
             </div>
             <div class="right-5">
-                <img src="content/join spoon 2-01.png" width="300" alt="Join Spoon graphic 2">
+                <img src="content/join spoon 2-01.png" width="300" alt="Join Spoon graphic 2" id="shadow">
             </div>
         </div>
         <div class="row4">
             <div class="left-4">
-                <img src="content/axo pr front-01.png" width="300" alt="AXO PR logo design">
+                <img src="content/axo pr front-01.png" width="300" alt="AXO PR logo design" id="shadow">
             </div>
             <div class="mid-4">
-                <img src="content/axo pr-01.png" width="300" alt="AXO PR logo design">
+                <img src="content/axo pr-01.png" width="300" alt="AXO PR logo design" id="shadow">
             </div>
 
             <div class="right-4">                
-                <img src="content/axo pr-02.png" width="300" alt="AXO PR logo design">
+                <img src="content/axo pr-02.png" width="300" alt="AXO PR logo design" id="shadow">
             </div>
         </div>
         <div class="row-3">
             <div class="right-3">
-                <img src="content/womens history month 2-01.png" width="300" alt="Womens History Month Post">
+                <img src="content/womens history month 2-01.png" width="300" alt="Womens History Month Post" id="shadow">
             </div>
             <div class="left-3">
-                <img src="content/Afro Fest-01.png" width="300" alt="Afro Beats Post">
+                <img src="content/Afro Fest-01.png" width="300" alt="Afro Beats Post" id="shadow">
             </div>
         </div>
         <div class="row-2">
             <div class="left-2">
-                <img src="content/Planet Underground Color.png" width="300" alt="Planet Underground Poster">
+                <img src="content/Planet Underground Color.png" width="300" alt="Planet Underground Poster" id="shadow">
             </div>
             <div class="mid-2">
                 <div class="midup-2">
-                    <img src="content/FINALLLLLLL SS ANNOUNCE.png" width="230" alt="Planet Underground Post">
+                    <img src="content/FINALLLLLLL SS ANNOUNCE.png" width="230" alt="Planet Underground Post" id="shadow">
                 </div>
                 <div class="middown-2">
-                    <img src="content/Sounds of Syracuse Cover.png" width="230" alt="Sounds of Syracuse Post">
+                    <img src="content/Sounds of Syracuse Cover.png" width="230" alt="Sounds of Syracuse Post" id="shadow">
                 </div>
             </div>
             <div class="right-2">
-                <img src= "content/Sounds of Syracuse Poster.png" width="265" alt="Sounds of Syracuse Poster">
+                <img src= "content/Sounds of Syracuse Poster.png" width="265" alt="Sounds of Syracuse Poster" id="shadow">
             </div>
         </div>
         <div class="row-1">
             <div class="right-1">
-                <img src="content/diamond garage solutions business card-02.png" width=400 alt="Diamond Garage Solutions color logo">
+                <img src="content/diamond garage solutions business card-02.png" width=400 alt="Diamond Garage Solutions color logo" id="shadow">
             </div>
             <div class="left-1">
-                <img src="content/chaser-01.png" width="400" alt="Chaser logor">
+                <img src="content/chaser-01.png" width="400" alt="Chaser logor" id="shadow">
             </div>
         </div>
         <div class="row0">
             <div class="left0">
-                <img class="left0" src="content/uu twitter-02.png" width="250" alt="University Union Twitter Background Photo">
+                <img class="left0" src="content/uu twitter-02.png" width="250" alt="University Union Twitter Background Photo" id="shadow">
             </div>
             <div class="right0">
-                <img class="right0" src="content/uu twitter-02.png" width="700" alt="University Union Instagram Profile Picture">
+                <img class="right0" src="content/uu twitter-02.png" width="700" alt="University Union Instagram Profile Picture" id="shadow">
             </div>
         </div>
         <div class="row1">
